backend/openshift/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lexis-backend
  namespace: ${OC_NAMESPACE}
  labels:
    app: lexis-backend
spec:
  replicas: ${MIN_REPLICAS}
  selector:
    matchLabels:
      app: lexis-backend
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  template:
    metadata:
      labels:
        app: lexis-backend
      annotations:
        prometheus.io/path: /actuator/prometheus
        prometheus.io/port: '8080'
        prometheus.io/scrape: 'true'
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
      containers:
        - name: lexis-backend
          image: ${BACKEND_IMAGE}
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: ${MIN_CPU}
              memory: ${MIN_MEM}
              ephemeral-storage: "200Mi"
            limits:
              cpu: "1000m"
              memory: "800Mi"
              ephemeral-storage: "500Mi"
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 300
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 5
            successThreshold: 1
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 20
            successThreshold: 1
          volumeMounts:
            - name: lexis-backend-api-cert
              mountPath: /cert
            - name: tls-certs
              mountPath: /etc/tls-certs
              readOnly: true
            - name: log-storage
              mountPath: /logs
            - name: app-storage
              mountPath: /temp
            - name: tmp-storage
              mountPath: /tmp
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
      volumes:
        - name: tls-certs
          secret:
            secretName: lexis-backend-cert
        - name: log-storage
          emptyDir: {}
        - name: app-storage
          emptyDir: {}
        - name: tmp-storage
          emptyDir: {}
        - name: init-tmp-storage
          emptyDir: {}
        - name: lexis-backend-api-cert
          persistentVolumeClaim:
            claimName: lexis-backend-api-cert
---
apiVersion: v1
kind: Service
metadata:
  name: lexis-backend
  namespace: ${OC_NAMESPACE}
  labels:
    app: lexis-backend
  annotations:
    service.alpha.openshift.io/serving-cert-secret-name: lexis-backend-cert
spec:
  selector:
    app: lexis-backend
  ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-frontend-and-monitoring-to-backend
  namespace: ${OC_NAMESPACE}
spec:
  podSelector:
    matchLabels:
      app: lexis-backend
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: lexis-frontend
        - namespaceSelector:
            matchLabels:
              network.openshift.io/policy-group: monitoring
  policyTypes:
    - Ingress
